# ai-coaching

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  package.json  vercel.json
BMAD/: youth-soccer-ai-management-system.md
BMAD/.bmad-core/: install-manifest.yaml
BMAD/docs/: brainstorming-session-results.md  prd.md
PRPs/: ai_coaching_management_system_prp.md
backend/: .env.example  CLAUDE.md  pyproject.toml  requirements.txt  test_airtable_integration.py  test_email_agent.py  test_embedding_service.py  test_gmail_integration.py  test_knowledge_agent.py  test_knowledge_models.py  test_orchestrator_agent.py  test_schedule_agent.py
backend/src/ai_coaching/: __init__.py  main.py
backend/src/ai_coaching/agents/: __init__.py  base.py  email.py  knowledge.py  orchestrator.py  registry.py  schedule.py
backend/src/ai_coaching/api/: __init__.py
backend/src/ai_coaching/api/middleware/: __init__.py  rate_limit.py
backend/src/ai_coaching/api/routes/: __init__.py  auth.py  gmail.py  health.py
backend/src/ai_coaching/config/: settings.py
backend/src/ai_coaching/database/: schema.py
backend/src/ai_coaching/database/migrations/: 001_initial_schema.sql
backend/src/ai_coaching/models/: __init__.py  base.py  knowledge.py
backend/src/ai_coaching/services/: airtable.py  database.py  embedding.py  gmail.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/emails/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/emails/: BulkActions.tsx  EmailPreview.tsx  EmailQueueItem.tsx  FamilyContextPanel.tsx  QueueFilters.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Loading.tsx  index.ts
frontend/src/hooks/: useApi.ts  useAuth.ts  useEmailQueue.ts  useFamilyContext.ts  useSupabase.ts
frontend/src/lib/: api.ts  supabase.ts  utils.ts
frontend/src/stores/: auth.ts  dashboard.ts
frontend/src/types/: index.ts
